Transfer the code to office network

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
       crossorigin="anonymous"
     />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Google font link -->
+  <link href="https://fonts.googleapis.com/css?family=Mali:600&display=swap" rel="stylesheet">
   <link
   rel="stylesheet"
   href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
@@ -24,11 +26,9 @@
 </head>
 <body>     
     <app-root></app-root>
-  <script
-  src="http://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"
-></script>
+    
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>    
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
   integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -39,11 +39,6 @@
   integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
   crossorigin="anonymous"
 ></script>
-<script>
-  // Get the current year for the copyright
-  $('#year').text(new Date().getFullYear());
-  CKEDITOR.replace('editor1');
-</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
 <script type="text/javascript">
   $(document).ready(function(){
